# SiloFlow

./: .gitattributes  .gitignore  12.0  7-Day_Forecast_Improvement_Plan.md  GPU_DATA_PROCESSING_GUIDE.md  GPU_INSTALLATION_GUIDE.md  Horizon_Bias_Fix_Summary.md  Learn.md  MEMORY_OPTIMIZED_TRAINING_ARCHITECTURE.md  MULTI_GPU_GUIDE.md  OPTUNA_OPTIMIZATION_GUIDE.md  Optuna_Parameter_Caching_Guide.md  POLARS_INTEGRATION_GUIDE.md  README.MD  README.md  SessionFlow.md  TESTING_SERVICE_ANALYSIS.md  curl.py  debug_raw_三角仓库_060761ff080d46c082053f97043e79bd_2025-07-24_2025-07-31.csv  debug_raw_三角仓库_060761ff080d46c082053f97043e79bd_2025-07-26_2025-08-01_plus_14_30.csv  example_simplified_training.py  granaries_and_silos.csv  granary_pipeline.py  handover.md  pyproject.toml  pyvenv.cfg  quickstart.md  requirements-gpu-alternatives.txt  requirements-gpu.txt  requirements.txt  test_batch_integration.py  test_filtering.py  test_get_all_granaries_and_silos.py  test_gpu.py  test_gpu_cache.py  test_gpu_detection.py  test_memory_integration.py  test_memory_optimized_training.py  test_polars_integration.py  test_quick_training.py  (+2 more)
app/: Dashboard.py  __init__.py  api_server.py  debug_future.py
deploy/: __init__.py  data_utils.py  features.py  forecasting.py  ingestion.py  model_utils.py  multi_lgbm.py  pipeline.py  preprocessing.py  server.py  tasks.py
docs/: PLAN.md
examples/: polars_integration_example.py
granarypredict/: __init__.py  cleaning.py  cleaning_helpers.py  compression_config.py  compression_utils.py  config.py  data_organizer.py  data_utils.py  evaluate.py  features.py  (+10 more)
(+3310 files in other folders)
