[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "siloflow"
version = "0.1.0"
authors = [{name = "GranaryPredict Team"}]
description = "Grain warehouse temperature forecasting pipeline"
readme = "README.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
include = ["granarypredict*"] 